--- a/css/prototype-styles.css
+++ b/css/prototype-styles.css
@@ -48,3 +48,51 @@ a.mail-button {
 #your-orders > li:hover {
     background-color: #eee;
 }
+#your-orders .status {
+    /* padding: 0 1em 1em 1em;
+    border: 1px solid #ccc;
+    color: #cb0d07; */
+    border-left: 3px solid #2A5DB0;
+    padding-left: 14px;
+}
+#your-orders .action-this {
+    border-left: 3px solid #cb0d07;
+}
+ul#your-orders {
+    border-top: 1px solid #ddd;
+    margin-top: 0;
+}
+.menu-disc li {
+    text-align: center;
+    list-style-type: none;
+    margin: 0 4px 4px 0;
+    display: inline-block;
+    width: auto;
+    float: left;
+}
+.menu-disc li a {
+    font-family: 'Bitter',Georgia, Verdana, Arial, Helvetica, serif;
+    font-size: 1.25em;
+    display: inline-block;
+    width: 40px;
+    height: auto;
+    color: #FEFEFE;
+    border-radius: 50%;
+    text-decoration: none;
+    line-height: 40px;
+}
+.menu-disc li a {
+    background-color: #008484;
+}
+.menu-disc li .active {
+    background-color: #ccc;
+}
+.date-filter {
+    background-color: #ddd;
+    margin-top: 14px;
+    padding: 1em;
+}
+input[type=date] {
+    border: 1px solid #ccc;
+    padding: 5px 3px;
+}
