Addition of strange class names

--- a/css/prototype-styles.css
+++ b/css/prototype-styles.css
@@ -14,6 +14,10 @@ ul.sibling li {
     border-left: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
 }
+.frobscottle {
+    display: inline;
+    background-color: orange;
+}
 #your-orders span.status-type {
     top: 0;
     right: 0;
@@ -70,6 +74,10 @@ ul#your-orders {
     width: auto;
     float: left;
 }
+.snozcumber {
+    border-right: 9000px;
+    border-radius: 50%;
+}
 .menu-disc li a {
     font-family: 'Bitter',Georgia, Verdana, Arial, Helvetica, serif;
     font-size: 1.25em;
@@ -86,6 +94,11 @@ ul#your-orders {
 }
 .menu-disc li .active {
     background-color: #ccc;
+}
+.bonecruncher {
+    height: 9000px;
+    font-size: large;
+    color: red;
 }
 .date-filter {
     background-color: #ddd;
