Bind toggle added

--- a/css/prototype-styles.css
+++ b/css/prototype-styles.css
@@ -106,3 +106,9 @@ input[type=date] {
 .status {
     text-align: right;
 }
+.morecontent span {
+    display: none;
+}
+.details {
+    display: none;
+}
